--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -9,7 +9,7 @@
       <div class="order-form">
         <%= form_for @order_item do |f| %>
         <%= f.hidden_field :product_id, value: product.id %>
-        <%= f.number_field :quantity, placeholder: "Oops, breaks if you don't add input!" %>
+        <%= f.number_field :quantity, placeholder: "0", min: 1, :required => true %>
         <span class="waves-effect waves-light btn"><%= f.submit "Add to cart" %></span>
         <% end %>
       </div>
