--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -1,4 +1,6 @@
-<hr>
-<%= image_tag(product.image, id: "product-image")%>
-<p><%= product.description %></p>
-<p><%= number_to_currency product.price %></p>
+<div class="card-panel">  
+  <%= image_tag(product.image, id: "product-image")%>
+  <h5><%= product.name %></h5>
+  <p><%= product.description %></p>
+  <p><%= number_to_currency product.price %></p>
+</div>
