--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -3,7 +3,8 @@
   <%= form_for @product do |f| %>
     Name: <%= f.text_field :name %>
     Description: <%= f.text_field :description %>
-    Password: <%= f.number_field :price %>
-  <%= f.submit "Submit" %>
+    Price: <%= f.number_field :price, min: 1 %>
+    Image: <%= f.file_field :image %>
+  <p><%= f.submit "Submit", {class: "waves-effect waves-light btn"} %></p>
 
 <% end %>
