--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -4,7 +4,7 @@
   <p><%= product.description %></p>
   <p><%= number_to_currency product.price %></p>
   <% if admin %>
-    <%= link_to "Delete Product", product_path(product),
+    <%= link_to "Edit Product", edit_product_path(product) %> | <%= link_to "Delete Product", product_path(product),
               :data => {:confirm => "Are you sure?",
               :method => "delete"} %>
     <% end %>
