--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,10 +1,3 @@
 <h1>Add a product.</h1>
 
-  <%= form_for @product do |f| %>
-    Name: <%= f.text_field :name %>
-    Description: <%= f.text_field :description %>
-    Price: <%= f.number_field :price, min: 1 %>
-    Image: <%= f.file_field :image %>
-  <p><%= f.submit "Submit", {class: "waves-effect waves-light btn"} %></p>
-
-<% end %>
+<%= render "form" %>
