--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_for @product do |f| %>
   Name: <%= f.text_field :name %>
   Description: <%= f.text_field :description %>
-  Price: <%= f.number_field :price, min: 1 %>
+  Price: <%= f.number_field :price, step: :any, min: 1 %>
   Image: <%= f.file_field :image %>
 <p><%= f.submit "Submit", {class: "waves-effect waves-light btn"} %></p>
 <% end %>
