pass create user spec.

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -6,5 +6,5 @@
   Email: <%= f.text_field :email %>
   Password: <%= f.password_field :password %>
   Password Confirmation: <%= f.password_field :password_confirmation %>
-  <span class="waves-effect waves-light btn"><%= f.submit "Sign up" %></span>
+  <span class="waves-effect waves-light btn"><%= f.submit "Create Account" %></span>
 <% end %>
