update show js for products.

--- a/app/views/products/show.js.erb
+++ b/app/views/products/show.js.erb
@@ -1,6 +1,4 @@
-$('#product-detail').html('<%= j render @product %>');
-
-// $("#product-name").click(function(){
-//   $(this).next('div').html('<%= j render @product %>');
-// console.log(this);
-// });
+$('#product-detail').show().html('<%= j render @product %>');
+$('#product-detail').click(function(){
+  $('#product-detail').hide()
+});
